--- a/content/backgrnd.tex
+++ b/content/backgrnd.tex
@@ -164,8 +164,8 @@ In this case graphical models can be useful since they often facilitate the task
 
 \begin{figure}
 	\centering
-    	\includegraphics[width=0.4\textwidth]{imgs/sampling.png} 
-    \caption[Sampling a Gaussian distribution.]{Sampling a Gaussian distribution. The number of samples in an interval approximates the true density function. As more samples are drawn, the approximation of the density function will be more exact \cite{sampleFD}.}
+    	\includegraphics[width=0.6\textwidth]{imgs/sampling.png} 
+    \caption[Sampling a Gaussian distribution.]{Sampling a Gaussian distribution. The number of samples in an interval approximates the true density function. As more samples are drawn, the approximation of the density function will become more exact \cite{sampleFD}.}
 	\label{fig:Sampling}
 \end{figure}
 
