--- a/content/exp.tex
+++ b/content/exp.tex
@@ -1111,7 +1111,7 @@ The trained DBN reaches a peak performance of $94 \%$ on the training set (see F
   		\includegraphics[width=.6\linewidth]{imgs/poker/recon_img8.png}
   		\label{fig:sub1}
 	\end{subfigure}%
-	\caption[Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset.]{Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset. The reconstruction of each class is nearly perfect indicating, the DBN has learned the basic structure of the data.}
+	\caption[Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset.]{Positive phase and negative phase in the first layer of the DBN of after training on the Poker-DVS dataset. The reconstruction of each class (bottom) is nearly perfect indicating, the DBN has learned the basic structure of the data.}
 	\label{fig:pokerrecon}
 \end{figure}
 
@@ -1161,7 +1161,7 @@ The trained DBN reaches a peak performance of $94 \%$ on the training set (see F
   		\includegraphics[width=.6\linewidth]{imgs/poker/compl42.png}
   		\label{fig:sub1}
 	\end{subfigure}%
-	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the bottom half of the image data was omitted. After training, the DBN was able to reconstruct and complete some parts of the input data.}
+	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the bottom half of the image data was omitted (top). After training, the DBN was able to reconstruct and complete some parts of the input data (bottom).}
 	\label{fig:pokercompl}
 \end{figure}
 
@@ -1210,7 +1210,7 @@ The trained DBN reaches a peak performance of $94 \%$ on the training set (see F
   		\includegraphics[width=.6\linewidth]{imgs/poker/compl44.png}
   		\label{fig:sub1}
 	\end{subfigure}%
-	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the right half of the image data was omitted. After training, the DBN was able to reconstruct and complete some parts of the input data.}
+	\caption[Completion of partially presented input data of the Poker-DVS dataset.]{Completion of partially presented input data of the Poker-DVS dataset. As input data, the right half of the image data was omitted (top). After training, the DBN was able to reconstruct and complete some parts of the input data (bottom).}
 	\label{fig:pokercompl}
 \end{figure}
 
