--- a/content/soa.tex
+++ b/content/soa.tex
@@ -51,23 +51,23 @@ E(\textbf{h} , \textbf{v}) = \textbf{h}^\intercal(W * \textbf{v}) + \textbf{h}^\
 	\centering
 	\begin{subfigure}[t]{.30\textwidth}
   		\centering
-  		\includegraphics[width=.8\linewidth]{imgs/crbm_padding1.png}
-  		\caption{The upward pass in the convolutional RBM}
+  		\includegraphics[width=.6\linewidth]{imgs/crbm_padding1.png}
+  		\caption{The upward pass.}
   		\label{fig:convrbmsub1}
 	\end{subfigure}%
 	\begin{subfigure}[t]{.30\textwidth}
   		\centering
   		\includegraphics[width=.8\linewidth]{imgs/kernel_flip.png}
-  		\caption{The 180\textdegree  flipped of the kernel matrix}
+  		\caption{The 180\textdegree flipped kernel.}
   		\label{fig:convrbmsub2}
 	\end{subfigure}
 	\begin{subfigure}[t]{.30\textwidth}
   		\centering
   		\includegraphics[width=.8\linewidth]{imgs/crbm_padding2.png}
-  		\caption{The downward pass in the convolutional RBM}
+  		\caption{The downward pass.}
   		\label{fig:convrbmsub3}
 	\end{subfigure}
-	\caption[A Gibbs sampling step in a convolutional RBM.]{A Gibbs sampling step in a convolutional RBM. At first the visible data is convolved with the kernel to get the hidden activations. Afterwards the kernel matrix is flipped 180\textdegree . In the downward pass the hidden activations with padding are convolved with the flipped kernel to get the new visible activations \cite{convImg}.}
+	\caption[A Gibbs sampling step in a convolutional RBM.]{A Gibbs sampling step in a convolutional RBM. At first the visible data is convolved with the kernel to get the hidden activations (a). Afterwards the kernel matrix is flipped 180\textdegree  (b). In the downward pass the hidden activations with padding are convolved with the flipped kernel to get the new visible activations (c) \cite{convImg}.}
 	\label{fig:convrbm}
 \end{figure}
 
@@ -123,7 +123,7 @@ Thus, for a given time step $t$ the state of the network $\textbf{z}(t) = (z_1(t
 \begin{figure}
 	\centering
     	\includegraphics[width=0.4\textwidth]{imgs/snn_sample1.png} 
-    \caption[A spiking neural network as probabilistic model.]{A spiking neural network as probabilistic model. The state $z_i$ of a neuron is set to $1$ for a time period $t_{on}$ after a spike. The complete state of the network $\textbf{z}$ is given by the individual state $(z_1, z_2, z_3, z_4)$  \cite{Petrovici2016}.}
+    \caption[A spiking neural network as probabilistic model.]{A spiking neural network as probabilistic model. The state $z_i$ of a neuron is set to $1$ for a time period $t_{on}$ after a spike. The complete state of the network $\textbf{z}$ is given by the individual states $(z_1, z_2, z_3, z_4)$  \cite{Petrovici2016}.}
 	\label{fig:snnsamp1}
 \end{figure}
 
@@ -156,7 +156,7 @@ p(\xi_t | \xi_{t-1}) =
   		\caption{}
   		\label{fig:snnsamp2sub1}
 	\end{subfigure}
-    \caption[The artificial counter state of a neuron in a discrete time.]{The artificial counter state $\xi$ of a neuron in a discrete time. In (a) the red state represent an active state $z_i = 1$. After a spike $\xi$ is set to the refractory period $\tau$. In each time step the refractory period counter $\xi$ is reduced by 1 until the neuron is inactive and can spike again. In (b) an exemplary membrane potential with the corresponding states of a neuron is given \cite{Buesing2011}.}
+    \caption[The artificial counter state of a neuron in discrete time.]{The artificial counter state $\xi$ of a neuron in discrete time. In (a) the red state represent an active state $z_i = 1$. After a spike $\xi$ is set to the refractory period $\tau$. In each time step the refractory period counter $\xi$ is reduced by 1 until the neuron is inactive and can spike again. In (b) an exemplary membrane potential with the corresponding states of a neuron is given \cite{Buesing2011}.}
 	\label{fig:snnsamp2}
 \end{figure}
 
